trunk/Archive2/ab/f5beadc99010d8/output
main.cpp: In function 'int main()':
main.cpp:7:21: error: no matching function for call to 'std::basic_istream<char>::getline(std::string&)'
   std::cin.getline(b);
                     ^
main.cpp:7:21: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:618:5: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::getline(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
     basic_istream<char>::
     ^
/usr/include/c++/4.8/istream:618:5: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/istream:427:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::getline(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       getline(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:427:7: note:   candidate expects 2 arguments, 1 provided
